# bjornbuijing

./: pyproject.toml
project/: 1 Test lineair.ipynb  2 Test convolutional.ipynb  4 Test senet.ipynb  5 test configurable.ipynb  Test lineair.ipynb  Test parameters.ipynb  config.gin  kladblok.ipynb
project/..\trained_models\/20220524-1532/: events.out.tfevents.1653406382.ML-RefVm-812132.6855.0
project/..\trained_models\BRBSequentialLow\/20220524-1514/: events.out.tfevents.1653405307.ML-RefVm-812132.6277.0
project/..\trained_models\BRBSequentialLow\/20220524-1516/: events.out.tfevents.1653405401.ML-RefVm-812132.6277.1
project/..\trained_models\BRBSequentialVariable\/20220524-1519/: events.out.tfevents.1653405599.ML-RefVm-812132.6277.2
project/..\trained_models\BRBSequentialVariable\/20220524-1540/: saved_config.gin  (+1 more)
project/DataUtils/: Getdata.py
project/Models/: ConvolutionalModelCollection.py  LineairModelCollection.py  SeNetModelCollection.py
project/Training/: trainer.py
trained_models/20220518-2314/: events.out.tfevents.1652908451.Selfbias.28156.0
trained_models/20220518-2319/: events.out.tfevents.1652908789.Selfbias.28156.1
trained_models/20220518-2339/: events.out.tfevents.1652909967.Selfbias.28156.5
trained_models/20220521-1155/: events.out.tfevents.1653126953.Selfbias.41084.0
trained_models/20220521-1156/: events.out.tfevents.1653126980.Selfbias.41084.2
trained_models/20220521-1157/: events.out.tfevents.1653127045.Selfbias.41084.3
trained_models/20220523-1115/: events.out.tfevents.1653297335.Selfbias.19056.0
(+43 files in other folders)
