[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Bjorn Buijing <b.buijing@formsvision.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
keras = "^2.9.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
