[tool.poetry]
name = "HomeProject"
version = "0.1.0"
description = ""
authors = ["B.Buijing"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
gin = "^0.1.6"
torchvision = "^0.12.0"
path = "^16.4.0"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
